package com.sep490.ecoverse_be.enums;

public enum TransactionType {
    EARN_GAME,
    EARN_QUIZ,
    EARN_TITLE,
    SPEND_REWARD,
    REFUND,
    ADJUSTMENT,
    COIN_EXPIRED
}
