@startuml class_school_approve_reject_reward_request
title Class Diagram - PUT /api/school/rewards/requests/{id}/approve (Duyệt/Từ chối yêu cầu)

skinparam classAttributeIconSize 0

package "controller" {
    class RewardRequestController {
        - rewardRequestService : IRewardRequestService
        + approveRequest(requestId: UUID, dto: RejectRewardRequestDto) : ResponseEntity<ResponseDto<RewardRequestResponse>>
    }
}

package "service" {
    interface IRewardRequestService {
        + approveOrRejectRequest(requestId: UUID, dto: RejectRewardRequestDto) : RewardRequestResponse
    }

    class RewardRequestServiceImpl implements IRewardRequestService {
        - rewardRequestRepository : RewardRequestRepository
        - rewardRepository : RewardRepository
        - studentRepository : StudentRepository
        - schoolRepository : SchoolRepository
        - coinTransactionRepository : CoinTransactionRepository
        - eventPublisher : ApplicationEventPublisher
        + approveOrRejectRequest(requestId: UUID, dto: RejectRewardRequestDto) : RewardRequestResponse
        - refundCoins(student: Student, amount: BigDecimal, ...) : void
        - releaseStock(reward: Reward, quantity: int) : void
    }
}

package "dto.request" {
    class RejectRewardRequestDto {
        - approved : boolean
        - reason : String
    }
}

package "entity" {
    class RewardRequest extends BaseEntity {
        - requestCode : String
        - student : Student
        - reward : Reward
        - school : School
        - quantity : Integer
        - totalCoins : BigDecimal
        - status : RewardRequestStatus
        - approvedBy : User
        - approvedAt : LocalDateTime
        - rejectedReason : String
        - rejectedAt : LocalDateTime
    }

    class CoinTransaction extends BaseEntity {
        - student : Student
        - transactionType : TransactionType
        - amount : BigDecimal
        - balanceBefore : BigDecimal
        - balanceAfter : BigDecimal
        - description : String
    }
}

package "enums" {
    enum TransactionType {
        SPEND_REWARD
        REFUND
    }
}

RewardRequestController --> IRewardRequestService : uses
RewardRequest --> Reward : reward
RewardRequest --> Student : student

@enduml
